# outlook-win32-openapi-tools-server

./: .env-example  .gitignore  LICENSE  README.md  pyproject.toml
app/: __init__.py  main.py  outlook.py
app/routers/: tasks.py
docs/: requirements.md
examples/: openwebui.yaml
