[project]
name = "outlook-win32-openapi-tools-server"
version = "0.1.0"
description = "Win32 COM based Outlook Tasks API server"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Henri Wenlin", email = "henri@example.com"}]

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pywin32; sys_platform == 'win32'",
    "python-dotenv",
    "requests>=2.32.4",
    "pydantic>=2.11.7",
    "pywin32>=310",
]

[project.scripts]
outlook-win32-openapi-tools-server = "app.main:run"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
